--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>پروفایل | توسعه‌دهنده وب و انیمیشن</title>
+  <title>پروفایل</title>
   <meta name="description" content="سلام! من امیرم، توسعه‌دهنده وب با عشق به انیمیشن و پروژه‌های جذاب.">
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -12,9 +12,9 @@
   <canvas id="particle-canvas"></canvas>
 
   <header>
-    <div class="logo" aria-label="لوگوی شخصی"><a href="Profile.html">A</a></div> 
-    <h1>سلام، من ابوالفضل ام</h1>
-    <p>توسعه‌دهنده وب | انیمیشن‌های جذاب و هر چیزی که شما بخواهید</p>
+    <div class="logo" aria-label="لوگوی شخصی"><a href="#">A</a></div> 
+    <h1>سلام، من ابولفضل ام</h1>
+    <p>توسعه‌دهنده وب | انیمیشن‌های جذاب و پروژه‌های حرفه‌ای</p>
   </header>
 
   <main>
@@ -26,13 +26,14 @@
       <a href="https://school-4frw.onrender.com" target="_blank" class="card" data-tooltip="سیستم مدیریت مدرسه آنلاین"><h3>پروژه 5</h3></a>
       <a href="https://washnow-landing.onrender.com" target="_blank" class="card" data-tooltip="لندینگ پیج سرویس کارواش آنلاین"><h3>پروژه 6</h3></a>
       <a href="https://luxtech-demo.onrender.com" target="_blank" class="card" data-tooltip="سایت دمو برای شرکت فناوری لوکس‌تک"><h3>پروژه 7</h3></a>
-      <a href="https://paygolan-shop.onrender.com" target="_blank" class="card" data-tooltip="فروشگاه آنلاین فروش گلاب   "><h3>پروژه 8</h3></a>
+      <a href="https://paygolan-shop.onrender.com" target="_blank" class="card" data-tooltip="فروشگاه آنلاین فروش گلاب"><h3>پروژه 8</h3></a>
     </section>
 
     <section class="interactive-sphere">
       <div class="sphere"></div>
     </section>
   </main>
+
   <script src="script.js" defer></script>
 </body>
 </html>
