--- a/index.html
+++ b/index.html
@@ -12,25 +12,60 @@
   <canvas id="particle-canvas"></canvas>
 
   <header>
-    <div class="logo" aria-label="لوگوی شخصی"><a href="#">A</a></div> 
     <h1>سلام، من ابولفضل ام</h1>
     <p>توسعه‌دهنده وب | انیمیشن‌های جذاب و پروژه‌های حرفه‌ای</p>
   </header>
 
   <main>
     <section class="projects">
-      <a href="https://login-form-demo-fw17.onrender.com" target="_blank" class="card" data-tooltip="فرم ثبت نام با اعتبارسنجی کامل"><h3>پروژه 1</h3></a>
-      <a href="https://notepad-demo.onrender.com/" target="_blank" class="card" data-tooltip="نوت‌پد ساده و سبک با قابلیت ذخیره"><h3>پروژه 2</h3></a>
-      <a href="https://skyfly-qzrn.onrender.com" target="_blank" class="card" data-tooltip="طراحی مدرن سایت رزرو بلیط"><h3>پروژه 3</h3></a>
-      <a href="https://dashboard-z8zx.onrender.com" target="_blank" class="card" data-tooltip="داشبورد مدیریت دوره‌ها و کاربران"><h3>پروژه 4</h3></a>
-      <a href="https://school-4frw.onrender.com" target="_blank" class="card" data-tooltip="سیستم مدیریت مدرسه آنلاین"><h3>پروژه 5</h3></a>
-      <a href="https://washnow-landing.onrender.com" target="_blank" class="card" data-tooltip="لندینگ پیج سرویس کارواش آنلاین"><h3>پروژه 6</h3></a>
-      <a href="https://luxtech-demo.onrender.com" target="_blank" class="card" data-tooltip="سایت دمو برای شرکت فناوری لوکس‌تک"><h3>پروژه 7</h3></a>
-      <a href="https://paygolan-shop.onrender.com" target="_blank" class="card" data-tooltip="فروشگاه آنلاین فروش گلاب"><h3>پروژه 8</h3></a>
-    </section>
-
-    <section class="interactive-sphere">
-      <div class="sphere"></div>
+      <a href="https://patogh-demo-20ik.onrender.com" target="_blank" class="card">
+        <h3>پروژه 1</h3>
+        <p>پلتفرم خرید و فروش ایرانی‌ها در ترکیه<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://carshop4.onrender.com/" target="_blank" class="card">
+        <h3>پروژه 2</h3>
+        <p>فروشگاه فروش قطعات ماشین با فرم پرداخت<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://skyfly-qzrn.onrender.com" target="_blank" class="card">
+        <h3>پروژه 3</h3>
+        <p>سایت رزرو بلیط با طراحی مدرن<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://dashboard-z8zx.onrender.com" target="_blank" class="card">
+        <h3>پروژه 4</h3>
+        <p>داشبورد مدیریت دوره‌ها و کاربران<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://school-4frw.onrender.com" target="_blank" class="card">
+        <h3>پروژه 5</h3>
+        <p>سیستم مدیریت مدرسه آنلاین<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://washnow-landing.onrender.com" target="_blank" class="card">
+        <h3>پروژه 6</h3>
+        <p>لندینگ پیج سرویس کارواش آنلاین<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://luxtech-demo.onrender.com" target="_blank" class="card">
+        <h3>پروژه 7</h3>
+        <p>سایت شرکتی فناوری لوکس‌تک<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://paygolan-shop.onrender.com" target="_blank" class="card">
+        <h3>پروژه 8</h3>
+        <p>فروشگاه آنلاین گلاب<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://hento-landing-page-demo-j4ch.onrender.com/" target="_blank" class="card">
+        <h3>پروژه 9</h3>
+        <p>Hento لندینگ پیج استارتاپ<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://game-store-demo.onrender.com/" target="_blank" class="card">
+        <h3>پروژه 10</h3>
+        <p>دموی فروشگاه محصولات گیمینگ<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://login-form-demo-fw17.onrender.com" target="_blank" class="card">
+        <h3>پروژه 11</h3>
+        <p>فرم ثبت‌ نام پیشرفته با اعتبارسنجی<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
+      <a href="https://notepad-demo.onrender.com" target="_blank" class="card">
+        <h3>پروژه 12</h3>
+        <p>اپلیکیشن نوت‌پد آنلاین ساده<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+      </a>
     </section>
   </main>
 
