--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main>
     <section class="projects">
-      <a href="https://patogh-demo-20ik.onrender.com" target="_blank" class="card">
+      <a href="https://patogh-demo-5lz5.onrender.com/" target="_blank" class="card">
         <h3>پروژه 1</h3>
         <p>پلتفرم خرید و فروش ایرانی‌ها در ترکیه<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
       </a>
