--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>پروفایل</title>
+  <title>پروفایل ابوالفضل</title>
   <meta name="description" content="سلام! من امیرم، توسعه‌دهنده وب با عشق به انیمیشن و پروژه‌های جذاب.">
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -12,59 +12,82 @@
   <canvas id="particle-canvas"></canvas>
 
   <header>
-    <h1>سلام، من ابولفضل ام</h1>
+    <h1>سلام، من ابوالفضل ام</h1>
     <p>توسعه‌دهنده وب | انیمیشن‌های جذاب و پروژه‌های حرفه‌ای</p>
   </header>
 
   <main>
     <section class="projects">
       <a href="https://patogh-demo-5lz5.onrender.com/" target="_blank" class="card">
+        <img src="https://i.postimg.cc/Pqv3SZLG/Patogh.png" alt="پروژه 1" class="card-img">
         <h3>پروژه 1</h3>
-        <p>پلتفرم خرید و فروش ایرانی‌ها در ترکیه<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>پلتفرم خرید و فروش ایرانی‌ها در ترکیه<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://carshop4.onrender.com/" target="_blank" class="card">
+        <img src="https://i.postimg.cc/DZb94HQ1/CarShop.png" alt="پروژه 2" class="card-img">
         <h3>پروژه 2</h3>
-        <p>فروشگاه فروش قطعات ماشین با فرم پرداخت<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>فروشگاه فروش قطعات ماشین با فرم پرداخت<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://skyfly-qzrn.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/Y9w38PKY/SkyFly.png" alt="پروژه 3" class="card-img">
         <h3>پروژه 3</h3>
-        <p>سایت رزرو بلیط با طراحی مدرن<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>سایت رزرو بلیط با طراحی مدرن<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://dashboard-z8zx.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/d3Pz264F/Dashborad.png" alt="پروژه 4" class="card-img">
         <h3>پروژه 4</h3>
-        <p>داشبورد مدیریت دوره‌ها و کاربران<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>داشبورد مدیریت دوره‌ها و کاربران<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://school-4frw.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/JncQFQMp/School.png" alt="پروژه 5" class="card-img">
         <h3>پروژه 5</h3>
-        <p>سیستم مدیریت مدرسه آنلاین<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>سیستم مدیریت مدرسه آنلاین<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://washnow-landing.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/pTxfKnz1/WashNow.png" alt="پروژه 6" class="card-img">
         <h3>پروژه 6</h3>
-        <p>لندینگ پیج سرویس کارواش آنلاین<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>لندینگ پیج سرویس کارواش آنلاین<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://luxtech-demo.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/FzVnj4Yh/LuxTech.png" alt="پروژه 7" class="card-img">
         <h3>پروژه 7</h3>
-        <p>سایت شرکتی فناوری لوکس‌تک<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>سایت شرکتی فناوری لوکس‌ تک<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://paygolan-shop.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/8CfKZWFz/Payglon.png" alt="پروژه 8" class="card-img">
         <h3>پروژه 8</h3>
-        <p>فروشگاه آنلاین گلاب<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>فروشگاه آنلاین گلاب<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://hento-landing-page-demo-j4ch.onrender.com/" target="_blank" class="card">
+        <img src="https://i.postimg.cc/vHGKGcK0/Hento.png" alt="پروژه 9" class="card-img">
         <h3>پروژه 9</h3>
-        <p>Hento لندینگ پیج استارتاپ<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>Hento لندینگ پیج استارتاپ<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://game-store-demo.onrender.com/" target="_blank" class="card">
+        <img src="https://i.postimg.cc/BQCdFxD9/GameStoe.png" alt="پروژه 10" class="card-img">
         <h3>پروژه 10</h3>
-        <p>دموی فروشگاه محصولات گیمینگ<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>دموی فروشگاه محصولات گیمینگ<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://login-form-demo-fw17.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/6Q8SFgmh/Login.png" alt="پروژه 11" class="card-img">
         <h3>پروژه 11</h3>
-        <p>فرم ثبت‌ نام پیشرفته با اعتبارسنجی<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>فرم ثبت‌ نام پیشرفته با اعتبارسنجی<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
+
       <a href="https://notepad-demo.onrender.com" target="_blank" class="card">
+        <img src="https://i.postimg.cc/X7xzqnMh/Notepad.png" alt="پروژه 12" class="card-img">
         <h3>پروژه 12</h3>
-        <p>اپلیکیشن نوت‌پد آنلاین ساده<br><span class="stack">( ساخته‌شده با زبان‌های: CSS, HTML و JS )</span></p>
+        <p>اپلیکیشن نوت‌پد آنلاین ساده<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
     </section>
   </main>
