--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="https://hento-landing-page-demo-j4ch.onrender.com/" target="_blank" class="card">
         <img src="https://i.postimg.cc/vHGKGcK0/Hento.png" alt="پروژه 9" class="card-img">
         <h3>پروژه 9</h3>
-        <p>Hento لندینگ پیج استارتاپ<br><span class="stack">(HTML, CSS, JS)</span></p>
+        <p> لندینگ پیج استارتاپ Hento<br><span class="stack">(HTML, CSS, JS)</span></p>
       </a>
 
       <a href="https://game-store-demo.onrender.com/" target="_blank" class="card">
